--- a/index.html
+++ b/index.html
@@ -9,35 +9,35 @@
 </head>
 <body>
     
-    <header>
-        <img src="/assets/images/inter.png" alt="Logo do Sport Club Internacional">
-        <nav>
-            <a href="https://www.lojadointer.com.br/">Inter Store</a>
-            <a href="http://mytuner-radio.com/pt/embed/radio-colorada-467093">Rádio Colorada</a>
+    <header class="header">
+        <img class="header-img" src="/assets/images/inter.png" alt="Logo do Sport Club Internacional">
+        <nav class="header-menu">
+            <a class="header-menu-item" href="https://www.lojadointer.com.br/">Inter Store</a>
+            <a class="header-menu-item" href="http://mytuner-radio.com/pt/embed/radio-colorada-467093">Rádio Colorada</a>
         </nav>
     </header>
 
-    <main>
-        <section>
-            <div>
-                <h1>Sport Club Internacional</h1>
-                <h3>O Sport Club Internacional é um clube multiesportivo brasileiro com sede na cidade de Porto Alegre, capital do Rio Grande do Sul. Foi fundado em 4 de abril de 1909, com o objetivo de ser uma instituição democrática e sem preconceitos.</h3>
-                <button>Site Oficial</button>
+    <main class="main">
+        <section class="main-content">
+            <div class="main-content-written">
+                <h1 class="main-content-written-title">Sport Club Internacional</h1>
+                <h3 class="main-content-written-description">O Sport Club Internacional é um clube multiesportivo brasileiro com sede na cidade de Porto Alegre, capital do Rio Grande do Sul.</h3>
+                <button class="main-content-written-button">Site Oficial</button>
             </div>
-            <img src="/assets/images/Saci.png" alt="Mascote do Internacional">
+            <img class="main-content-img" src="/assets/images/Saci.png" alt="Mascote do Internacional">
         </section>
             
-        <section>
-            <p>O Colorado é um dos clubes mais vitoriosos do Brasil e das Américas, sendo o terceiro maior campeão internacional do país, com sete conquistas oficiais, superado somente por Santos e São Paulo. Suas maiores conquistas foram as do Mundial de Clubes da FIFA, em 2006, e os dois títulos da Copa Libertadores da América, em 2006 e 2010, além de uma Copa Sul-Americana de forma invicta, em 2008, dois títulos da Recopa Sul-Americana, em 2007 e 2011, e uma Levain Cup/CONMEBOL, em 2009.</p>
-            <p>Em relação às conquistas em nível nacional, o Internacional é detentor de três títulos do Campeonato Brasileiro (1975, 1976 e 1979), sendo o terceiro de forma invicta, além de uma Copa do Brasil e um Torneio Heleno Nunes. É o primeiro clube da Região Sul a conquistar títulos nacionais e a disputar uma final de Copa Libertadores. Além disso, manteve-se durante vinte e quatro anos seguidos (1975–1998) na liderança no Ranking de Pontos do Campeonato Brasileiro, período em que disputou sete semifinais, três fases finais e quatro finais da competição (1975, 1976, 1979 e 1988). O Internacional ainda é o maior vencedor do Campeonato Gaúcho, tendo conquistado quarenta cinco vezes a competição, e detém o recorde de maior número de conquistas consecutivas: oito vezes, entre 1969 e 1976.</p>       
-            <p>Desde 1969, manda suas partidas de futebol no estádio Beira-Rio, de propriedade do clube, com capacidade para mais de cinquenta mil torcedores. O local passou por uma ampla reforma entre 2010 e 2014 para poder sediar partidas da Copa do Mundo de 2014. Além disso, o clube é dono do Ginásio Gigantinho e do Centro de Treinamentos Parque Gigante. O time feminino, por sua vez, joga na sede campestre do SESC, em Porto Alegre, desde 2020. O Internacional é um dos clubes de futebol mais populares do Brasil, com uma torcida estimada em 6,4 milhões de torcedores espalhados pelo país. É o clube pioneiro do país no programa sócio-torcedor, lançado em 2003. Em 2020, contava com mais de cento e vinte mil associados. No mesmo ano, foi considerado o quinto mais valioso do futebol brasileiro, avaliado em 1,749 bilhão de reais em estudo da empresa Sports Value. Contudo, o clube atingiu o maior déficit anual da história ao fechar 2020 com noventa milhões de reais de prejuízo e vem registrando resultados financeiros negativos desde 2016. O seu presidente atual é Alessandro Barcellos, que assumiu o mandato no início de 2021.</p>
-            <p>Além do futebol masculino, o Internacional também já manteve ou mantém outras modalidades esportivas coletivas e individuais, como futebol feminino, atletismo, e-sports, basquete, boxe, taekwondo, voleibol e futebol de salão. Nesta última, conquistou a Liga Futsal de 1996, a Copa Libertadores de Futsal de 2000, a Copa Intercontinental de Futsal de 1996 e oito títulos estaduais. No futebol feminino, é o maior vencedor do Campeonato Gaúcho, com dez títulos, sendo o mais recente em 2020. Entre ídolos e atletas de destaque do clube estão Larry Pinto de Faria, Bodinho, Paulo Roberto Falcão, Elias Figueroa, Valdomiro, Claudiomiro, Manga, Caçapava, Fernandão (homenageado pelo clube com uma estátua) e Andrés D'Alessandro.</p>
+        <section class="secondary-content">
+            <p class="secondary-content-text">O Colorado é um dos clubes mais vitoriosos do Brasil e das Américas, sendo o terceiro maior campeão internacional do país, com sete conquistas oficiais, superado somente por Santos e São Paulo. Suas maiores conquistas foram as do Mundial de Clubes da FIFA, em 2006, e os dois títulos da Copa Libertadores da América, em 2006 e 2010, além de uma Copa Sul-Americana de forma invicta, em 2008, dois títulos da Recopa Sul-Americana, em 2007 e 2011, e uma Levain Cup/CONMEBOL, em 2009.</p>
+            <p class="secondary-content-text">Em relação às conquistas em nível nacional, o Internacional é detentor de três títulos do Campeonato Brasileiro (1975, 1976 e 1979), sendo o terceiro de forma invicta, além de uma Copa do Brasil e um Torneio Heleno Nunes. É o primeiro clube da Região Sul a conquistar títulos nacionais e a disputar uma final de Copa Libertadores. Além disso, manteve-se durante vinte e quatro anos seguidos (1975–1998) na liderança no Ranking de Pontos do Campeonato Brasileiro, período em que disputou sete semifinais, três fases finais e quatro finais da competição (1975, 1976, 1979 e 1988). O Internacional ainda é o maior vencedor do Campeonato Gaúcho, tendo conquistado quarenta cinco vezes a competição, e detém o recorde de maior número de conquistas consecutivas: oito vezes, entre 1969 e 1976.</p>       
+            <p class="secondary-content-text">Desde 1969, manda suas partidas de futebol no estádio Beira-Rio, de propriedade do clube, com capacidade para mais de cinquenta mil torcedores. O local passou por uma ampla reforma entre 2010 e 2014 para poder sediar partidas da Copa do Mundo de 2014. Além disso, o clube é dono do Ginásio Gigantinho e do Centro de Treinamentos Parque Gigante. O time feminino, por sua vez, joga na sede campestre do SESC, em Porto Alegre, desde 2020. O Internacional é um dos clubes de futebol mais populares do Brasil, com uma torcida estimada em 6,4 milhões de torcedores espalhados pelo país. É o clube pioneiro do país no programa sócio-torcedor, lançado em 2003. Em 2020, contava com mais de cento e vinte mil associados. No mesmo ano, foi considerado o quinto mais valioso do futebol brasileiro, avaliado em 1,749 bilhão de reais em estudo da empresa Sports Value. Contudo, o clube atingiu o maior déficit anual da história ao fechar 2020 com noventa milhões de reais de prejuízo e vem registrando resultados financeiros negativos desde 2016. O seu presidente atual é Alessandro Barcellos, que assumiu o mandato no início de 2021.</p>
+            <p class="secondary-content-text">Além do futebol masculino, o Internacional também já manteve ou mantém outras modalidades esportivas coletivas e individuais, como futebol feminino, atletismo, e-sports, basquete, boxe, taekwondo, voleibol e futebol de salão. Nesta última, conquistou a Liga Futsal de 1996, a Copa Libertadores de Futsal de 2000, a Copa Intercontinental de Futsal de 1996 e oito títulos estaduais. No futebol feminino, é o maior vencedor do Campeonato Gaúcho, com dez títulos, sendo o mais recente em 2020. Entre ídolos e atletas de destaque do clube estão Larry Pinto de Faria, Bodinho, Paulo Roberto Falcão, Elias Figueroa, Valdomiro, Claudiomiro, Manga, Caçapava, Fernandão (homenageado pelo clube com uma estátua) e Andrés D'Alessandro.</p>
         </section>
     </main>
 
-    <footer>
-        <h2>INTERNACIONAL</h2>
-        <img src="/assets/images/Beira-Rio.png" alt="Estádio Beira Rio">
+    <footer class="footer">
+        <h2 class="footer-title">INTERNACIONAL</h2>
+        <img class="footer-img" src="/assets/images/Beira-Rio.png" alt="Estádio Beira Rio">
     </footer>
 
 
