--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section class="main-content">
             <div class="main-content-written">
                 <h1 class="main-content-written-title">Sport Club Internacional</h1>
-                <h3 class="main-content-written-description">O Sport Club Internacional é um clube multiesportivo brasileiro com sede na cidade de Porto Alegre, capital do Rio Grande do Sul.</h3>
+                <h3 class="main-content-written-description">O Sport Club Internacional é um clube multiesportivo brasileiro, com sede na capital do Rio Grande do Sul.</h3>
                 <button class="main-content-written-button">Site Oficial</button>
             </div>
             <img class="main-content-img" src="/assets/images/Saci.png" alt="Mascote do Internacional">
