--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Principais informações do Sport Club Internacional">
     <title>Internacional</title>
@@ -22,7 +23,7 @@
             <div class="main-content-written">
                 <h1 class="main-content-written-title">Sport Club Internacional</h1>
                 <h3 class="main-content-written-description">O Sport Club Internacional é um clube multiesportivo brasileiro, com sede na capital do Rio Grande do Sul.</h3>
-                <button class="main-content-written-button">Site Oficial</button>
+                <a class="main-content-written-a" href="https://internacional.com.br/">Site Oficial</a>
             </div>
             <img class="main-content-img" src="/assets/images/Saci.png" alt="Mascote do Internacional">
         </section>
